# ocr-mcp-service

./: .gitignore  COMPARISON_GUIDE.md  CURSOR_CONFIG_GUIDE.md  DUAL_SERVICE_SETUP.md  GLOBAL_CONTEXT.md  IMPLEMENTATION_COMPARISON.md  LICENSE  Makefile  OFFICIAL_IMPLEMENTATION_ANALYSIS.md  OFFICIAL_SERVICE_QUICKSTART.md  PYTHON_RUNNING_GUIDE.md  README.md  generate_mcp_config.sh  mcp_config.json  mcp_config_all.json  mcp_config_dual.json  mcp_config_official.json  mcp_ocr_server.py  prompt_template.md  pyproject.toml  requirements.txt  usage_guide.md  配置指南.md
.cursor/rules/: task-tracking-log.mdc
docs/: # 📋 Agent 全局上下文任务追踪日志.md  MCP工具掉线修复实施报告.md  MCP工具掉线原因分析.md  MCP工具清单.md  MCP最佳实践与应用.md  MCP最佳实践应用总结.md  OCR_COMPLETE_GUIDE.md  OCR_SOLUTIONS_COMPARISON.md  OCR方案调研与对比.md  README.md  You do.图片分析Prompt模板.md  You do.图片分析工作流程Prompt.md  build_plan.md  ocr_engines_comparison_report.md  多种使用方式方案探讨.md  构建计划.md  输出失败原因分析.md  防中断机制说明.md  项目自检报告.md
scripts/: BATCH_OCR_README.md  QUICK_START.md  README.md  __init__.py  batch_ocr.py  check_mcp_config.py  check_status.py  common.py  compare_engines.py  generate_config.py  generate_summary.py  list_tools.py  recognize_image.py  recognize_images.py  run_all.py  save_ocr_results.py  setup_cursor.py  simple_ocr_test.py  stop_service.py  tail_logs.py  verify.py  verify_engines.py  verify_logging.py  view_logs.py
src/ocr_mcp_service/: __init__.py  __main__.py  analysis_generator.py  config.py  config_manager.py  logger.py  mcp_server.py  models.py  ocr_engine.py  progress_tracker.py  prompt_loader.py  scenario_detector.py  tools.py  utils.py
tests/: __init__.py  conftest.py  test_analysis_generator.py  test_basic.py  test_config_manager.py  test_engines.py  test_error_handling.py  test_logger.py  test_mcp_integration.py  test_mcp_server.py  test_progress_tracker.py  test_tools.py
tests/docs/: TEST_INTEGRATION_REPORT.md
东野圭吾图片测试集/ocr_results/: batch_summary.json  batch_summary.md
